# Pet-Platform-Back

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
docs/: pet-plat.drawio
src/: main.py  settings.py
src/database/: database.py
src/database/dao/: dao.py
src/database/models/: base.py
tests/: conftest.py  test_main.py
